changement du parametre de la route info de mon a id

--- a/templates/equipement/all.html.twig
+++ b/templates/equipement/all.html.twig
@@ -12,7 +12,7 @@
         {% for equipement in equipements %}
         <tr>
             <td>
-                <a href= {{path('equipement_info', {nom:equipement.nom}) }} >{{equipement.nom}}</a>
+                <a href= {{path('equipement_info', {id:equipement.id}) }} >{{equipement.nom}}</a>
             </td>
             <td>
                 {{equipement.marque}}
